# aoc-2021

./: .gitignore  advent-of-code2021.cabal  day1.hs
app/: Main.hs  day10.hs  day11.hs  day14.hs  day2.hs  day3.hs  day4.hs  day6.hs  day7.hs  day8.hs  day9.hs
