cabal-version:      2.4
name:               advent-of-code2021
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ole Michaelis
maintainer:         Ole.Michaelis@googlemail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent-of-code2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        regex-tdfa ^>=1.3.1.1
    other-modules:
        Day2,
        Day3,
        Day4,
        Day6
    hs-source-dirs:   app
    default-language: Haskell2010

